--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ transformers==2.3.0
 sentence_transformers==0.2.5
 summa==1.2.0
 scikit-learn==1.0.1
+networkx==2.6.3
+python-louvain==0.15
+matplotlib==3.5.1
